--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<h1> Hello World </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Srikanth Prabhu</title>
+</head>
+<body>
+  <h1>Hello, I'm Srikanth Prabhu</h1>
+  <p>I'm a AI Data Architect specializing in Python, Spark, Azure, and Big Data.</p>
+
+  <h2>Contact</h2>
+  <ul>
+    <li>Email: srikanth@example.com</li>
+    <li>GitHub: <a href="https://github.com/yourusername">yourusername</a></li>
+    <li>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></li>
+  </ul>
+
+  <h2>Skills</h2>
+  <ul>
+    <li>Python, PySpark, SQL</li>
+    <li>Azure Synapse, Data Lakes, Pipelines</li>
+    <li>Machine Learning, LLMs, RAG</li>
+  </ul>
+</body>
+</html>
